# numberlink

./: .gitmodules  README.md  pyproject.toml
backend/: constraint_solver_path.py  generator.py  generator_1.py  main.py  puzzle.py  pyco_solver_path.py  pyproject.toml  solver.py
backend/generators/: generator_1.py  generator_2.py  generator_3.py
backend/solvers/: __init__.py  constraint_solver_path.py  pyco_solver_edge.py  pyco_solver_path.py  utils.py
experiment/: benchmarking.ipynb  generate_puzzles.py  generator.ipynb  parse_grid.py  puzzles.json  puzzles_large.py  puzzles_medium.py  puzzles_small.py  pycosat_edges.ipynb  pycosat_paths.ipynb  pyproject.toml  results.csv  solver.ipynb
experiment/grids/: grid_10.py  grid_4.py  grid_5.py  grid_6.py  grid_7.py  grid_8.py  grid_9.py
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  GetPuzzle.tsx  Grid.tsx  Puzzle.tsx  SolvePuzzle.tsx  Solver.tsx  SolverGrid.tsx
