[tool.poetry]
name = "numberlink"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
ortools = "^9.11.4210"
ipykernel = "^6.29.5"
graphviz = "^0.20.3"
tqdm = "^4.67.0"
matplotlib = "^3.9.2"
pycosat = "^0.6.6"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.10.0"}
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
